--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
  
-<title>Bootstrap Responsive Web Template</title>
+<title>Espaço de dança Débora santos</title>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
 <!-- CSS Files -->
@@ -63,8 +63,7 @@
 				<ul class="nav navbar-nav">
 					<li><a href="#top">Página inicial</a></li>
 					<li><a href="#services">cursos</a></li>
-					<li><a href="#about-us">Sobre nós</a></li> 
-					<li><a href="#portfolios">Portfolio</a></li>
+					<li><a href="#about-us">Sobre nós</a></li>
 					<li><a href="#clients">Alunas</a></li>				
 					<li><a href="#contact">Contato</a></li>
 				</ul>
@@ -145,7 +144,7 @@
 		<div class="row">
 			<div class="col-md-10 col-md-offset-1 col-sm-12 text-center feature-title">
  
-				<h2>Nossao missão</h2>
+				<h2>Nossa missão</h2>
 				<p>Transformar jovens sonhadores em dançarinos profissionais com a capacidade de ganhar o mundo e se realizar pessoal e profissionalmente através da dança..</p>
 			</div>
 		</div>
@@ -275,7 +274,7 @@
 </div>
 </div>
 </div>
- 
+<!--  
 <div id="pricing">
 	<div class="container">
 		<div class="text-center">
@@ -373,7 +372,7 @@
 		</div>
 	</div>
 </div>
-	 
+	  -->
 
 <div id="contact">
 	<div class="contact fullscreen parallax" style="background-image:url('images/bg2.jpg');" data-img-width="2000" data-img-height="1334" data-diff="100">
@@ -415,7 +414,7 @@
 		</div>
 	</div>
 </div>  
-<footer id="footer">
+<!-- <footer id="footer">
 	<div class="container">
 		<div class="col-sm-4 col-sm-offset-4">
 			 
@@ -429,7 +428,7 @@
 			<div class="text-center wow fadeInUp" style="font-size: 14px;">Copyright Businessr 2015 - Template by <a href="http://www.webthemez.com">Webthemez</a></div>
 			<a href="#" class="scrollToTop"><i class="pe-7s-up-arrow pe-va"></i></a>
 		</div>	
-	</div>	
+	</div>	 -->
 </footer>
 	
 	<!-- javascript files -->
